tests/fixtures/valid/types/udt_defaults.pine
//@version=6
indicator("UDT defaults")
type Pivot
    int x = 0
    float y = na
p = Pivot.new()
plot(close)
