tests/fixtures/invalid/semantic/const_reassignment.pine
//@version=6
indicator("x")
const float x = 1.0
x := 2.0
plot(x)
